<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_createAccount"
            android:text="@string/tv_createAccount_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_username"
            android:inputType="text"
            android:hint="@string/et_username_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_email"
            android:inputType="textEmailAddress"
            android:hint="@string/et_email_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_password"
            android:inputType="textPassword"
            android:hint="@string/et_password_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_register_repeatPassword"
            android:inputType="textPassword"
            android:hint="@string/et_password_hint"/>


        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_register_register"
            android:text="@string/btn_register_text"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</RelativeLayout>